--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,12 @@ services:
       - MYSQL_DATABASE=hhplus
     volumes:
       - ./data/mysql/:/var/lib/mysql
+  redis:
+    image: redis:7.4.3
+    ports:
+      - "6379:6379"
+    volumes:
+      - ./data/redis/:/data
 
 networks:
   default:
