--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,7 +29,7 @@ services:
       - KAFKA_CFG_CONTROLLER_LISTENER_NAMES=CONTROLLER
       - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=PLAINTEXT:PLAINTEXT,CONTROLLER:PLAINTEXT
       - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092,CONTROLLER://:9093
-      - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://kafka1:9092
+      - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://localhost:9092
       - KAFKA_CFG_CONTROLLER_QUORUM_VOTERS=0@kafka1:9093
       - KAFKA_KRAFT_CLUSTER_ID=kraft-cluster-bitnami
       - KAFKA_CFG_AUTO_CREATE_TOPICS_ENABLE=true
@@ -48,6 +48,39 @@ services:
       - KAFKA_CLUSTERS_0_AUDIT_CONSOLEAUDITENABLED=true
     depends_on:
       - kafka1
+  k6:
+    image: grafana/k6:1.0.0
+    tty: true
+    environment:
+      - K6_OUT=influxdb=http://influxdb:8086/k6db
+    volumes:
+      - ./data/k6:/scripts
+    command: run /scripts/api-coupon-get-load-test.js
+    depends_on:
+      - influxdb
+  grafana:
+    image: grafana/grafana:9.3.8
+    ports:
+      - "3000:3000"
+    environment:
+      - GF_AUTH_ANONYMOUS_ORG_ROLE=Admin
+      - GF_AUTH_ANONYMOUS_ENABLED=true
+      - GF_AUTH_BASIC_ENABLED=false
+    volumes:
+      - ./data/grafana:/etc/grafana/provisioning/
+  influxdb:
+    image: influxdb:1.8.9
+    container_name: influxdb
+    ports:
+      - "8086:8086"
+    environment:
+      - DOCKER_INFLUXDB_INIT_USERNAME=admin
+      - INFLUXDB_ADMIN_USER_PASSWORD=admin123
+      - INFLUXDB_HTTP_AUTH_ENABLED=false
+      - INFLUXDB_DB=k6db
+    volumes:
+      - ./data/influxdb:/var/lib/influxdb
+
 
 
 networks:
